# Claudesk

./: .gitignore  .mcp.json  .prettierignore  CHANGELOG.md  CLAUDE.md  README.md  eslint.config.js  index.html  package.json  pip.html  pnpm-lock.yaml  pnpm-workspace.yaml  runtimes.md  vite.config.ts
.claude/memory/: MEMORY.md  bash-cargo-env.md  brew-cask-manual-delete-desync.md  cc-hook-capture-beats-docs.md  cc-hook-event-facts.md  cc-tui-cr-not-lf.md  claudesk-philosophy.md  cm6-dont-copy-compartment-by-analogy.md  cmd-shift-digit-reserved-for-filmstrip.md  day-view-flexible-timeline-model.md  feedback_no_sublime_activate.md  feedback_osascript_activate_side_effects.md  feedback_read_help_before_cli_matrix.md  feedback_surfaced_in_discoveries_not_worktree.md  hmr-stale-across-file-rename.md  installed-build-verify-deferred-to-release.md  m7-docs-viewer-intent.md  macos-case-collision-module-naming.md  macos-tcc-permissions-granted.md  mcp-bridge-manage-window-reads-native-geometry.md  mcp-bridge-seed-held-workspace-status-via-fiber.md  observable-outcomes-execution-evidence.md  pty-output-buffer-until-frontend-ready.md  pty-probe-observable-default.md  raw-mode-cr-is-enter.md  reclassifier-primitives-need-session-end-cap.md  synthetic-tab-seam-reusable-readonly-buffer.md  tauri-command-removal-needs-invoke-sweep.md  tauri-nspanel-pip-gotchas.md  tauri-scaffold-recipe.md  tauri-xterm-pty-gotchas.md  time-tracking-capture-is-machine-global.md  verify-native-pty-via-ps-screencapture-stderr.md  verify-self-dev-vs-prod-process-name-collision.md  verify-self-stub-cannot-cross-subprocess-boundary.md  vitest-raw-import-css-returns-processed-not-text.md  wp4-macos-perf-measurement.md  zsh-histfile-overridden-by-etc-zshrc.md
docs/: claudesk-fab-for-icon.md
docs/product/: arch.md  context.md  debt-paydown-sweep-2-wbs.md  debt-paydown-wbs.md  design-priors.md  qol-wbs.md  research.md  roadmap.md  vision.md  wbs.md  wp1-n-workspace-cost-probe-outcome.md  wp1-time-analytics-probe-outcome.md  wp2.5-native-signal-schema.md  wp4-thumbnail-probe-outcome.md
probe/: gen-cc-replay-cast.mjs  gen-synthetic-cast.mjs  measure.sh  parse-powermetrics.mjs  parse-top.mjs
public/: pip-probe.html
public/probe-fixtures/: cc-replay.cast  synthetic.cast
src/: App.css  App.tsx  main.tsx  useTauriListen.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.json
src-tauri/capabilities/: default.json
src-tauri/examples/: cc_pty_probe.rs  hook_socket_probe.pl  hook_socket_probe.rs
src-tauri/icons/: icon.icns
src-tauri/icons-dev/: icon.icns
src-tauri/resources/: claudesk-hook.pl
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app_menu/: mod.rs
src-tauri/src/cc_session/: commands.rs  mod.rs
src-tauri/src/config_store/: commands.rs  mod.rs  settings.rs
src-tauri/src/editor_fs/: commands.rs  mod.rs
src-tauri/src/env_path/: mod.rs
src-tauri/src/finder/: commands.rs  mod.rs
src-tauri/src/fs_index/: commands.rs  mod.rs
src-tauri/src/fs_watch/: commands.rs  mod.rs
src-tauri/src/git_diff/: commands.rs  mod.rs
src-tauri/src/git_status/: commands.rs  mod.rs
src-tauri/src/hook_install/: commands.rs  mod.rs
src-tauri/src/hook_socket/: commands.rs  mod.rs
src-tauri/src/pip/: commands.rs  layout.rs  mod.rs
src-tauri/src/pip_probe/: commands.rs  mod.rs
src-tauri/src/project_search/: commands.rs  mod.rs
src-tauri/src/reclassify/: mod.rs  tests.rs
src-tauri/src/status_broadcaster/: commands.rs  mod.rs
src-tauri/src/status_log/: mod.rs
src-tauri/src/sublime/: commands.rs  mod.rs
src-tauri/src/time_store/: commands.rs  mod.rs  query.rs
src-tauri/src/time_store/query/: tests.rs
src-tauri/src/tray/: commands.rs  mod.rs
src-tauri/src/updater/: commands.rs  mod.rs
src-tauri/tests/: hook_pl_output.rs  shell_history_on_kill.rs
src/__tests__/: smoke.test.ts
src/cc/: bridge.ts  permissionMode.ts  respawnGuard.ts  spawnTrigger.ts
src/finder/: finderLaunch.ts
src/menu/: menuBridge.ts
src/pip/: Pip.tsx  main.tsx  pip.css  pipFrame.ts  pipLayout.ts  pipPanelSize.ts  usePipFanout.ts
src/probe/: Harness.tsx  ProbeApp.tsx  frameStats.ts  replay.ts
src/state/: appView.ts  fsChange.ts  seedWorkspace.ts  timeAnalytics.ts  useWorkspaceList.ts  useWorkspaceStatus.ts  workspace.ts  workspaceStatus.ts
src/sublime/: chord.ts  sublimeLaunch.ts
src/updater/: UpdateNotifyBanner.tsx  UpdaterStatusRow.tsx  UpdaterTrigger.tsx  copyToClipboard.ts  updateFlowState.ts  updateNotifyState.ts  updaterPrefs.ts  useUpdater.ts
tooling/demo/: .gitignore  README.md  _dots.generated.css  args.mjs  args.nodetest.mjs  backdropAt.js  backdropAt.nodetest.mjs  build.mjs  busyAt.js  busyAt.nodetest.mjs  capture.mjs  cursorAt.js  cursorAt.nodetest.mjs  extract-dot-css.mjs  frameAt.js  frameAt.nodetest.mjs  package.json  readme-assets.nodetest.mjs  render.mjs  shell.css  shell.html  shell.js  shell.pip.oneplusone.html  shell.pip.scene6.html  timeline.filmstrip.js  timeline.filmstrip.nodetest.mjs  timeline.filmstrip.scene6.js  timeline.pip.js  timeline.pip.nodetest.mjs  timeline.pip.oneplusone.js  timeline.pip.scene6.js  timeline.smoke.js
workflow/: .session.md  backlog-archived.md  backlog-quality-findings.md  backlog.md
workflow/archive/: app-menu-bar.md  cc-permission-mode-dropdown.md  dev-prod-isolation.md  editor-fs-backend-hardening.md  finder-open-button.md  gui-path-fix.md  incident-terminal-blank-cursor.md  m10-wp1-unsigned-relaunch-selfclear-probe.md  m10-wp2-updater-core.md  m10-wp3-brew-detect-and-defer.md  m10-wp4-updater-user-control-ux.md  m10-wp5-release-publishing-pipeline.md  m10-wp6-milestone-exit-verify.md  m10.5-wp1-pip-top-right-default.md  m10.5-wp2-active-close-confirmation.md  m10.5-wp3-cc-terminal-clean-kill.md  m10.5-wp4-cc-io-encoding-mojibake.md  m2-wp1-cm6-probe.md  m2-wp10-file-tree.md  m2-wp11-git-status-path-keying.md  m2-wp11-tree-density-git-indicators.md  m2-wp12-editor-tab-strip.md  m2-wp13-close-tab-chord.md  m2-wp2-editor-shell.md  m2-wp3a-editor-core-editing.md  m2-wp3b-command-palette.md  m2-wp3c-editor-split-panes.md  m4-wp2-n1-lift.md  (+75 more)
(+298 files in other folders)
