[package]
name = "claudesk"
version = "0.1.1"
description = "macOS-only lite IDE for the daily Claude Code + Sublime Text workflow."
authors = ["Stayman"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "claudesk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# WP7: PtyCcSession. Promoted from [dev-dependencies] (WP2 probe) to a production
# dependency now that the embedded CC terminal ships. base64 encodes PTY output
# bytes for the cc-output-<sid> event payload (Vec<u8> over IPC is a heavy JSON
# number array; base64 string is ~4x cheaper and atob-decodes on the frontend).
portable-pty = "0.9"
base64 = "0.22"
# WP8: Sublime Text pop. `which` resolves `subl` on PATH for the discovery rule
# (PATH → .app bundle → `open -a`), per the WP3 probe hand-off contract. The hotkey
# is an in-app webview keybinding (not an OS-global shortcut), so no
# tauri-plugin-global-shortcut / macOS Accessibility machinery is needed.
which = "8"
# WP4: Git diff viewer. libgit2 binding — supplies the changed-file list
# (unstaged + staged) and per-file base-content blobs (HEAD/index) that the
# frontend feeds to @codemirror/merge for rendering. libgit2-sys vendors libgit2
# from source, so no system libgit2 dependency. default-features=false drops the
# SSH/HTTPS transport we never use (we only open local on-disk repos). We use
# git2 for *data* only; @codemirror/merge computes + renders the diff itself.
git2 = { version = "0.21", default-features = false }
# WP6: Cmd+P fuzzy file finder. ripgrep's directory walker — honors .gitignore /
# .ignore / global gitignore out of the box, so the fs_index walk returns only the
# files the operator actually edits (no node_modules/target/.git). Chosen over
# walkdir + hand-rolled gitignore parsing deliberately so WP7's ripgrep-style
# content search REUSES the same walker (same ecosystem). Data only — the React
# overlay does the fuzzy match + render.
ignore = "0.4"
# WP7: project-wide content search. The `regex` crate (ripgrep's own matching engine,
# same ecosystem as `ignore`/`grep`) drives all four search modes — substring (the
# pattern is regex-escaped), regex, case-sensitivity (the `(?i)` flag), and whole-word
# (`\b…\b` wrapping). Chosen over shelling out to the `rg` binary so search reuses
# fs_index's `ignore` walker (one shared .gitignore contract with the finder + tree),
# needs no user-installed binary, and stays a pure-fn TempDir-testable core. Search is
# in-process and line-oriented; `regex` gives byte match ranges per line directly.
regex = "1"
# QoL-WP0: filesystem watcher (FileTree auto-refresh + editor live-reload). The
# debouncer re-exports `notify ^8.2` (one dep, not two) and does rename From/To
# pairing + FSEvents file-ID stitching — exactly the editor/formatter write-then-rename
# atomic-save case. The lighter notify-debouncer-mini was rejected (no rename pairing);
# watchexec-as-a-library rejected (full command-runner framework — overkill). Ignored
# paths are filtered with the SAME `ignore`-crate matcher fs_index uses for the tree
# walk (one .gitignore contract; .git/ hard-excluded), so the watcher and the tree
# agree on visibility and we never fire a re-walk storm on build-dir / VCS churn.
notify-debouncer-full = "0.7"

[dev-dependencies]
tempfile = "3"

