[package]
name = "claudesk"
version = "0.2.4"
description = "macOS-only lite IDE for the daily Claude Code + Sublime Text workflow."
authors = ["Stayman"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "claudesk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# macos-private-api: required by tauri-nspanel (NSPanel conversion uses private
# AppKit surface); paired with "macOSPrivateApi": true in tauri.conf.json. M5 WP1.
# tray-icon: the M7 menu-bar status item (TrayIconBuilder + set_icon_with_as_template).
# image-png: decode the bundled lit/neutral tray PNG glyphs via Image::from_bytes
# (neither is in tauri's default feature set).
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
# M5 WP1 (PiP probe): NSPanel wrapper for the always-on-top floating PiP panel.
# Git-only (not on crates.io); branch v2.1 is the Tauri-2.x line (its Cargo.toml
# floors tauri at 2.8.5, satisfied by our 2.11.x). PanelBuilder exposes
# no_activate + PanelLevel::Floating + collection_behavior(CanJoinAllSpaces |
# FullScreenAuxiliary | Stationary) natively — no raw objc2 fallback needed.
# Bus-factor: single-maintainer crate; monitor tauri-apps/tauri#13034 for
# first-party NSPanel support. See docs/product/wbs.md → M5 WP1 "Probe outcomes".
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# WP7: PtyCcSession. Promoted from [dev-dependencies] (WP2 probe) to a production
# dependency now that the embedded CC terminal ships. base64 encodes PTY output
# bytes for the cc-output-<sid> event payload (Vec<u8> over IPC is a heavy JSON
# number array; base64 string is ~4x cheaper and atob-decodes on the frontend).
portable-pty = "0.9"
base64 = "0.22"
# WP8: Sublime Text pop. `which` resolves `subl` on PATH for the discovery rule
# (PATH → .app bundle → `open -a`), per the WP3 probe hand-off contract. The hotkey
# is an in-app webview keybinding (not an OS-global shortcut), so no
# tauri-plugin-global-shortcut / macOS Accessibility machinery is needed.
which = "8"
# WP4: Git diff viewer. libgit2 binding — supplies the changed-file list
# (unstaged + staged) and per-file base-content blobs (HEAD/index) that the
# frontend feeds to @codemirror/merge for rendering. libgit2-sys vendors libgit2
# from source, so no system libgit2 dependency. default-features=false drops the
# SSH/HTTPS transport we never use (we only open local on-disk repos). We use
# git2 for *data* only; @codemirror/merge computes + renders the diff itself.
git2 = { version = "0.21", default-features = false }
# WP7: project-wide content search. The `regex` crate drives all four search modes —
# substring (the pattern is regex-escaped), regex, case-sensitivity (the `(?i)` flag),
# and whole-word (`\b…\b` wrapping). Chosen over shelling out to the `rg` binary so
# search needs no user-installed binary and stays a pure-fn TempDir-testable core.
# Search walks the SAME manual-DFS `read_dir` index `fs_index` exposes (heavy-dir
# pruning, NOT gitignore — see `fs_index/mod.rs`); it is in-process and line-oriented,
# and `regex` gives byte match ranges per line directly.
regex = "1"
# QoL-WP0: filesystem watcher (FileTree auto-refresh + editor live-reload). The
# debouncer re-exports `notify ^8.2` (one dep, not two) and does rename From/To
# pairing + FSEvents file-ID stitching — exactly the editor/formatter write-then-rename
# atomic-save case. The lighter notify-debouncer-mini was rejected (no rename pairing);
# watchexec-as-a-library rejected (full command-runner framework — overkill). Heavy /
# generated dirs are filtered with the SAME heavy-dir criterion `fs_index` uses for the
# tree walk (`.git/` hard-excluded), so the watcher and the tree agree on visibility and
# we never fire a re-walk storm on build-dir / VCS churn.
notify-debouncer-full = "0.7"
# QoL-WP5b: delete-folder. `trash` moves a path to the macOS Trash (NSFileManager
# under the hood) instead of an unrecoverable `remove_dir_all` — chosen for the
# folder-delete blast radius (a misclick wipes a subtree), so a deleted folder is
# recoverable from Finder. Handles both files and dirs; WP5b wires it to dir rows
# (the shipped single-file delete stays a hard `remove_file` — deliberate asymmetry,
# a single file is low-stakes). The pure core stays TempDir-testable: a trashed path
# is gone from the workspace root, which is what the tests assert (not its OS-level
# recoverability, which is the crate's/OS's job).
trash = "5"

# M5 WP2 (PROBE — agent UI-driver adopt/reject): the MCP bridge plugin that drives
# the real WKWebView with live Tauri IPC (so a workspace actually mounts under an
# agent driver, unlike the bare-Vite Playwright path that has no IPC). DEV-ONLY: a
# normal [dependencies] entry, but its `init()` is registered ONLY under
# `#[cfg(debug_assertions)]` in lib.rs, so `tauri build` (release) links nothing
# from it (verify: `nm -a ./target/release/claudesk | grep -i mcp` → empty). The
# plugin binds 0.0.0.0:9223 by default; we use `localhost_only()` so the dev bridge
# never exposes the webview on the LAN. Probe disposition (keep vs. tear down)
# follows the WP2 verdict in docs/product/wbs.md "Probe outcomes".
tauri-plugin-mcp-bridge = "0.11"

[dev-dependencies]
tempfile = "3"

